[gd_scene load_steps=5 format=3 uid="uid://1e8a7fdbgc4q"]

[ext_resource type="Script" path="res://main.gd" id="1_cj110"]
[ext_resource type="PackedScene" uid="uid://dl0077k1byx51" path="res://fox.tscn" id="2_h6b1m"]
[ext_resource type="PackedScene" uid="uid://kf3fa5037c38" path="res://coin.tscn" id="3_5idv7"]
[ext_resource type="Script" path="res://time_left.gd" id="4_pxi3e"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cj110")
fox_scene = ExtResource("2_h6b1m")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(950, 350)
layout_mode = 2
offset_left = 101.0
offset_top = 236.0
offset_right = 1051.0
offset_bottom = 641.0
size_flags_horizontal = 4

[node name="WordContainer" type="FlowContainer" parent="."]
custom_minimum_size = Vector2(900, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -36.0
offset_right = 450.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_top = 37.0
offset_right = 132.0
offset_bottom = 133.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 70
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighscoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -207.0
offset_top = -21.0
offset_right = 208.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Highscore: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FoxLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -136.0
offset_right = 44.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
text = "Fox Count: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_left = 101.0
offset_top = 37.0
offset_right = 301.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 50
text = "Reset
"

[node name="Coin" parent="." node_paths=PackedStringArray("word_container") instance=ExtResource("3_5idv7")]
layout_mode = 1
offset_left = 917.0
offset_top = 37.0
offset_right = -135.0
offset_bottom = -511.0
word_container = NodePath("../WordContainer")

[node name="TimeLeft" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 133.0
offset_right = 124.0
offset_bottom = 188.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Time Left: 30"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_pxi3e")

[node name="Timer" type="Timer" parent="TimeLeft"]
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="timeout" from="TimeLeft/Timer" to="." method="_on_timer_timeout"]
